Feat: header section

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
 :root {
+    --primary-color: #667085;
+    --red: #8e2424;
+    --base-white: #ffffff;
+    --title: #101828;
+
+    --p-size: 16px;
+    --title-size: 48px;
+
+}
+:root {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
-    --primary-color: #667085;
-    --red: #8e2424;
-    --base-white: #ffffff;
+    font-size: var(--p-size);
+    color: var(--primary-color);
 }
 
 li {
