feat: depoiments section

--- a/src/components/JobOpening/Job/style.css
+++ b/src/components/JobOpening/Job/style.css
@@ -1,5 +1,5 @@
 .job_container {
-    border: 1px solid red;
+    border: 1px solid #EAECF0;
     border-radius: 10px;
     width: 700px;
     padding: 20px;
